# SDFGenFast

./: .gitignore  .gitmodules  BUILD.md  CMakeLists.txt  README.md  pyproject.toml
app/: CMakeLists.txt  main.cpp
common/: CMakeLists.txt  mesh_repair.cpp  mesh_repair.h  sdfgen_unified.cpp  sdfgen_unified.h
gpu_lib/: makelevelset3_gpu.cu
python/: CMakeLists.txt  README.md  sdfgen_py.cpp
python/examples/: basic_usage.py
python/tests/: conftest.py  test_sdfgen.py
sdf_to_mesh/: CMakeLists.txt  sdf_to_mesh.cpp
sdfgen/: __init__.py
tests/: CMakeLists.txt  test_mesh_repair.cpp
tools/: build.bat  configure.bat
