[build-system]
requires = ["scikit-build-core>=0.3.3", "nanobind>=2.0.0"]
build-backend = "scikit_build_core.build"

[project]
name = "sdfgen"
version = "1.0.0"
description = "GPU-accelerated signed distance field generation from triangle meshes"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Brad Chamberlain"},
    {name = "Christopher Batty"}
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
]

[project.urls]
Homepage = "https://github.com/yourusername/SDFGenFast"
Repository = "https://github.com/yourusername/SDFGenFast"
Issues = "https://github.com/yourusername/SDFGenFast/issues"

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-benchmark>=4.0",
]
dev = [
    "pytest>=7.0",
    "pytest-benchmark>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
]

[tool.scikit-build]
cmake.source-dir = "."
cmake.build-type = "Release"
wheel.install-dir = "sdfgen"

[tool.scikit-build.cmake.define]
BUILD_PYTHON_BINDINGS = "ON"

[tool.pytest.ini_options]
testpaths = ["python/tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.black]
line-length = 100
target-version = ['py38']

[tool.ruff]
line-length = 100
target-version = "py38"
